--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -32,6 +32,7 @@
 @import './component-variables/create-form';
 @import './component-variables/file-uploader';
 @import './component-variables/properties';
+@import './component-variables/avatar-uploader';
 
 :root {
 	$colors:(
@@ -69,6 +70,7 @@
 		$createFormColorsDefault,
 		$fileUploaderColorsDefault,
 		$propertiesColorsDefault,
+		$avatarUploaderColorsDefault,
 	);
 
 	@each $key_name in $colors {
