--- a/src/components/OptionSelector/styles.scss
+++ b/src/components/OptionSelector/styles.scss
@@ -20,16 +20,14 @@ $radio-inner-size: calc($radio-size / 2);
   }
   .single-option {
     @include flex(row, center, flex-start);
-    &.disabled{
-        opacity: 0.5;
-        pointer-events: none;
+    &.disabled {
+      opacity: 0.5;
+      pointer-events: none;
     }
     &-input {
       width: 0;
       height: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
+      visibility: hidden;
       opacity: 0;
       &:focus {
         & + .single-option {
@@ -89,8 +87,8 @@ $radio-inner-size: calc($radio-size / 2);
       @include transition;
       &:hover {
         @include border-like-shadow(var(--option-hover-border-width), var(--option-hover-border));
-        &::before{
-            background: var(--option-hover-color);
+        &::before {
+          background: var(--option-hover-color);
         }
       }
       &::before {
