--- a/src/pages/Home/components/Banner/styles.module.scss
+++ b/src/pages/Home/components/Banner/styles.module.scss
@@ -66,7 +66,7 @@
       line-height: 20px;
     }
     .logo {
-      margin-top: -50px;
+      margin-top: 0;
       margin-right: 0;
     }
     .bannerBtns {
