--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -83,12 +83,31 @@
     bottom: 0;
   }
 }
+.bullets{
+  display: none;
+}
+.swiper-pagination-bullet{
+  width: 40px;
+  height: 6px;
+  border-radius: 20px;
+  background-color: $light-white;
+  opacity: 1;
+  &.active{
+    background-color: $accent-2;
+  }
+}
 @include middle-screen {
   .swiper-button-prev {
-    left: 10px;
+    display: none;
   }
   .swiper-button-next {
-    right: 10px;
+    display: none;
+  }
+  .bullets{
+    position: absolute;
+    bottom: -25px !important;
+    @include flex(row, center, center);
+    z-index: 10;
   }
 }
 @include default-screen {
