move colors in vars

--- a/src/assets/styles/component-variables/_swiper.scss
+++ b/src/assets/styles/component-variables/_swiper.scss
@@ -2,8 +2,12 @@
 
 $swiperColorsDefault: (
   "swiper-default-background": $light-white,
+  "swiper-bullet-background": $light-white,  
+  "swiper-bullet-background-active": $accent-2,
 );
 
 $swiperColorsLight: (
   "swiper-default-background": $light-white,
+  "swiper-bullet-background": $light-white,  
+  "swiper-bullet-background-active": $accent-2,
 );
