--- a/src/pages/NftPage/components/NftPayment/styles.module.scss
+++ b/src/pages/NftPage/components/NftPayment/styles.module.scss
@@ -21,27 +21,28 @@
   }
   .listing {
     width: 100%;
-    .method{
-      margin-top: space(24);
-    }
-    .rates {
-      height: 40px;
-      margin-top: space(24);
-      @include flex(row, center, flex-start);
-      .currency {
-        @include flex(row, center, center);
-        &Wrapper {
-          max-width: 150px;
-          height: 100%;
-        }
-        &Text {
-          margin-left: space(8);
-        }
-      }
-      .currencyWrapper + .currencyWrapper {
-        margin-left: space(8);
-      }
-    }
+    margin-top: space(24);
+    max-width: 324px;
+    // .method{
+    // }
+    // .rates {
+    //   height: 40px;
+    //   margin-top: space(24);
+    //   @include flex(row, center, flex-start);
+    //   .currency {
+    //     @include flex(row, center, center);
+    //     &Wrapper {
+    //       max-width: 150px;
+    //       height: 100%;
+    //     }
+    //     &Text {
+    //       margin-left: space(8);
+    //     }
+    //   }
+    //   .currencyWrapper + .currencyWrapper {
+    //     margin-left: space(8);
+    //   }
+    // }
   }
   .createLot {
     margin-top: space(24);
