--- a/src/components/AvatarUploader/styles.module.scss
+++ b/src/components/AvatarUploader/styles.module.scss
@@ -2,100 +2,122 @@
 @import 'assets/styles/mixins';
 @import 'src/styles/helpers';
 
-.upload-avatar__wrapper {
-  width: 100%;
-  width: 144px;
-  height: 144px;
-  background: var(--avatarUploader-background);
-  border-radius: 50%;
-  border: var(--avatarUploader-border);
-  overflow: hidden;
+.upload-avatar {
   position: relative;
-  overflow: hidden;
-  @include transition;
-  &.failed-load {
-    background: var(--avatarUploader-error-background);
-    border: var(--avatarUploader-error-border);
-  }
-  &.over-active {
-    background: var(--avatarUploader-hover-background);
-    border: var(--avatarUploader-hover-border);
-    .upload-avatar__wrapper {
-      &__body {
-        &-title {
-          top: 65%;
+  &__wrapper {
+    width: 100%;
+    width: 160px;
+    height: 160px;
+    background: var(--avatarUploader-background);
+    border-radius: 50%;
+    border: var(--avatarUploader-border);
+    overflow: hidden;
+    position: relative;
+    overflow: hidden;
+    @include transition;
+    &.failed-load {
+      background: var(--avatarUploader-error-background);
+      border: var(--avatarUploader-error-border);
+    }
+    &.over-active {
+      background: var(--avatarUploader-hover-background);
+      border: var(--avatarUploader-hover-border);
+      .upload-avatar__wrapper {
+        &__body {
+          &-title {
+            top: 65%;
+          }
         }
       }
     }
-  }
-  &__body {
-    height: 100%;
-    position: relative;
-    cursor: pointer;
-    border-radius: 50%;
-    @include flex(column, center, center);
-    &__hidden-input {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 0;
-      opacity: 0;
-      pointer-events: none;
-    }
-    &-title {
-      max-width: 180px;
-      margin-bottom: 15px;
-      position: absolute;
-      top: 110%;
-      @include flex(column, center, flex-start);
-      @include transition;
-    }
-  }
-  &__image {
-    &-preview {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
+    &__body {
       height: 100%;
-      pointer-events: none;
-      opacity: 0;
-      @include transition;
-      &.avatar-active{
-          opacity: 1;
-      }
-    }
-    &-delete{
-        margin-top: 10px;
+      position: relative;
+      cursor: pointer;
+      border-radius: 50%;
+      @include flex(column, center, center);
+      &__hidden-input {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
         opacity: 0;
         pointer-events: none;
-        top: 100%;
+      }
+      &-title {
+        max-width: 180px;
+        margin-bottom: 15px;
+        position: absolute;
+        top: 110%;
+        @include flex(column, center, flex-start);
+        @include transition;
+      }
+      &-icon {
+        svg {
+          width: 28px;
+          path {
+            fill: var(--avatarUploader-icon-color);
+          }
+        }
+      }
+    }
+    &__image {
+      &-preview {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        opacity: 0;
+        @include transition;
+        &.avatar-active {
+          opacity: 1;
+        }
+      }
+      &-delete {
+        opacity: 0;
+        pointer-events: none;
+        top: 0;
+        right: 0;
         transform: translateY(10px);
         position: absolute;
+        width: 24px;
+        height: 24px;
         @include flex(row, center, center);
         @include transition;
-        &.with-delete{
-            opacity: 1;
-            pointer-events: all;
-            transform: translateY(0);
+        button {
+          padding: 0;
+          width: 100%;
+          height: 100%;
+          svg{
+            width: 100%;
+            height: 100%; 
+          }
         }
+        &.with-delete {
+          opacity: 1;
+          pointer-events: all;
+          transform: translateY(0);
+        }
+      }
     }
-  }
-  &:hover {
-    background: var(--avatarUploader-hover-background);
-    border: var(--avatarUploader-hover-border);
-    .upload-avatar__wrapper {
-      &__body {
-        &-title {
-          top: 65%;
+    &:hover {
+      background: var(--avatarUploader-hover-background);
+      border: var(--avatarUploader-hover-border);
+      .upload-avatar__wrapper {
+        &__body {
+          &-title {
+            top: 65%;
+          }
         }
       }
     }
   }
 }
 
-.invisible{
+.invisible {
   opacity: 0;
 }
 
