add search action

--- a/src/assets/styles/component-variables/_search-collection.scss
+++ b/src/assets/styles/component-variables/_search-collection.scss
@@ -12,4 +12,5 @@ $searchCollectionColorsDefault:(
   'searchCollection-body-border-radius': 12px,
   'searchCollection-item-border-color': $light-middle,
 
+  'searchCollection-active-collection-background': $metal-100,
 )
