Profile page desktop layout

--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -20,6 +20,7 @@ $typographyColorsDefault: (
   "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
   "typography-base-900-color": $base-900,
+  "typography-yellow-500-color": $yellow-500,
 );
 
 $typographyColorsLight: (
@@ -42,4 +43,5 @@ $typographyColorsLight: (
   "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
   "typography-base-900-color": $base-900,
+  "typography-yellow-500-color": $yellow-500,
 );
