--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -164,6 +164,10 @@
   color: var(--typography-base-900-color);
 }
 
+.yellow500{
+  color: var(--typography-yellow-500-color);
+}
+
 .normalWeight {
   font-weight: 400;
 }
