--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -74,6 +74,11 @@ $gray-6: #F2F2F2;
 $gray-50: #FDFDFD;
 $gray: #C4C4C4;
 
+//yellow
+$yellow-50: #FEFCE7;
+$yellow-500: #E7B008;
+
+
 //shadows
 $shadow-0: 0px 10px 10px -5px rgba(0, 0, 0, 0.04), 0px 20px 25px -5px rgba(0, 0, 0, 0.1);
 $shadow-2: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
