add wallet icon, searchCollections & search header input values, swiper breakpoints

--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -22,7 +22,9 @@
   }
   .headerInput {
     height: 44px;
-    width: 250px;
+    &.fullWidth {
+      width: 250px;
+    }
   }
   .headerDropdown {
     height: 44px;
