final create nft page

--- a/src/components/FileUploader/styles.module.scss
+++ b/src/components/FileUploader/styles.module.scss
@@ -34,6 +34,12 @@
   }
 }
 
+@include middle-tablet{
+  .fileUploader{
+    height: 342px;
+  }
+}
+
 @keyframes shake-icon {
   0% {
     transform: translateY(0);
