--- a/src/components/Preview/styles.module.scss
+++ b/src/components/Preview/styles.module.scss
@@ -32,3 +32,11 @@
 .contain {
   object-fit: contain;
 }
+
+.switcher{
+  @include flex(row, center, flex-start);
+  margin-bottom: space(4) !important;
+  .switchText{
+    margin-left: space(12);
+  }
+}
