--- a/src/pages/Profile/components/Body/styles.module.scss
+++ b/src/pages/Profile/components/Body/styles.module.scss
@@ -34,6 +34,7 @@
     }
     .bio{
       margin-top: space(19);
+      max-width: 600px;
       &Title{
         font-size: 20px;
         line-height: 34px;
