--- a/src/pages/Profile/components/Body/styles.module.scss
+++ b/src/pages/Profile/components/Body/styles.module.scss
@@ -7,6 +7,22 @@
 
   .filters {
     background-color: var(--filters-button-background-color);
+    .filtersIcon {
+      color: #384252;
+      @include transition;
+    }
+    &:hover,
+    &:active,
+    &:focus {
+      .filtersText {
+        color: var(--button-filled-default-color);
+        @include transition;
+      }
+      .filtersIcon {
+        color: var(--button-filled-default-color);
+        @include transition;
+      }
+    }
   }
   &Top {
     @include flex(column, flex-start, flex-start);
@@ -15,7 +31,7 @@
       margin-top: space(38);
       margin-left: 190px;
     }
-    .total{
+    .total {
       margin-left: 190px;
     }
     .collections {
@@ -32,10 +48,10 @@
       margin-bottom: space(24);
       align-self: flex-start;
     }
-    .bio{
+    .bio {
       margin-top: space(19);
       max-width: 600px;
-      &Title{
+      &Title {
         font-size: 20px;
         line-height: 34px;
         font-weight: 500;
