--- a/src/pages/Profile/styles.module.scss
+++ b/src/pages/Profile/styles.module.scss
@@ -6,13 +6,14 @@
   .header {
     @include flex(row, flex-start, flex-start);
     margin-top: space(65);
+    padding: 0 20px;
 
     .right {
       @include flex(row, flex-start, space-between);
       width: 100%;
     }
     .info {
-      margin-left: space(80);
+      margin-left: space(60);
     }
 
     .following {
@@ -79,6 +80,16 @@
     }
     .socialsItem + .socialsItem {
       margin-top: space(16);
+    }
+  }
+}
+@include middle-screen{
+  .profile{
+    .header{
+      padding: 0;
+      .info{
+        margin-left: space(80);
+      }
     }
   }
 }
