--- a/src/pages/Profile/components/Nfts/styles.module.scss
+++ b/src/pages/Profile/components/Nfts/styles.module.scss
@@ -85,7 +85,7 @@
     height: fit-content;
     width: 100%;
     .card {
-      max-width: 264px;
+      max-width: 100%;
     }
   }
   .standarts {
