--- a/src/components/AvatarUploader/styles.module.scss
+++ b/src/components/AvatarUploader/styles.module.scss
@@ -79,8 +79,8 @@
       &-delete {
         opacity: 0;
         pointer-events: none;
-        top: 0;
-        right: 0;
+        bottom: 0;
+        left: 0;
         transform: translateY(10px);
         position: absolute;
         width: 24px;
