hot fix of art card layout

--- a/src/components/ArtCard/styles.scss
+++ b/src/components/ArtCard/styles.scss
@@ -31,6 +31,9 @@
     @include flex(row, center, center);
 
   }
+  &-image{
+    width: 100%;
+  }
   &-imageWrapper{
     overflow: hidden;
     flex: 0 1 80%;
