--- a/src/pages/Explore/components/Body/styles.module.scss
+++ b/src/pages/Explore/components/Body/styles.module.scss
@@ -73,6 +73,18 @@
       }
     }
   }
+  .bodyResultsWrapper {
+    .load {
+      height: 44px;
+      width: 100%;
+      margin-top: space(32);
+      &Text{
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16.94px;
+      }
+    }
+  }
   &Results {
     display: grid;
     justify-content: center;
