--- a/src/components/Modals/modals/SendPendingModal/styles.module.scss
+++ b/src/components/Modals/modals/SendPendingModal/styles.module.scss
@@ -11,6 +11,11 @@
   @include flex(row, center, center);
 }
 
+.title {
+  font-size: 20px;
+  line-height: 34px;
+}
+
 .subtitle {
   margin-bottom: 20px;
 }
