--- a/src/components/Modals/modals/SendSuccessModal/styles.module.scss
+++ b/src/components/Modals/modals/SendSuccessModal/styles.module.scss
@@ -1,9 +1,20 @@
+@import 'assets/styles/variables';
+@import 'assets/styles/mixins';
 @import 'src/styles/helpers.scss';
 
 .icon {
   margin-top: 36px;
   margin-bottom: 24px;
   @include flex(row, center, center);
+}
+
+.title {
+  font-size: 20px;
+  line-height: 34px;
+}
+
+.success{
+  color: $accent
 }
 
 .subtitle {
@@ -18,6 +29,5 @@
 
 .clipboard {
   margin: 0 auto;
-  border: 1px solid $dark;
   margin-top: 20px;
 }
