--- a/src/containers/Filters/styles.module.scss
+++ b/src/containers/Filters/styles.module.scss
@@ -70,21 +70,23 @@
   }
 
   &.buttonOnly {
-    position: fixed;
+    position: absolute;
     padding: 0;
     opacity: 0;
-    top: 100%;
+    top: 0;
+    left: calc(100% + 20px);
     transform: scale(1);
     height: 100%;
+    pointer-events: none;
+    @include transition;
+    @include shadow-0;
     &.active {
       opacity: 1;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      min-width: 400px;
+      max-width: 260px;
       min-height: 500px;
       width: fit-content;
       height: fit-content;
+      pointer-events: all;
       background-color: var(--filters-default-background-color);
       padding: 16px 24px 24px;
       z-index: 100;
@@ -138,6 +140,7 @@
       display: none;
     }
     &.buttonOnly{
+      position: fixed;
       &.active{
         top: 0;
         left: 0;
