--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -34,6 +34,7 @@
 @import './component-variables/properties';
 @import './component-variables/avatar-uploader';
 @import './component-variables/nft-page';
+@import './component-variables/connect-modals';
 
 :root {
 	$colors:(
@@ -72,7 +73,8 @@
 		$fileUploaderColorsDefault,
 		$propertiesColorsDefault,
 		$avatarUploaderColorsDefault,
-		$nftpageColorsDefault
+		$nftpageColorsDefault,
+		$connectModalColorsDefault,
 	);
 
 	@each $key_name in $colors {
