--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent !important;
+  -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body {
