--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -1,6 +1,7 @@
 * {
   font-family: Inter, sans-serif;
   -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 iframe{
@@ -58,6 +59,9 @@ div[id='root'] {
 
   button {
     box-sizing: border-box;
+    &:focus,&:active{
+      outline: none;
+    }
   }
 
   .flexCenter {
