--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -4,7 +4,7 @@
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-iframe{
+iframe {
   display: none;
 }
 
@@ -59,7 +59,8 @@ div[id='root'] {
 
   button {
     box-sizing: border-box;
-    &:focus,&:active{
+    &:focus,
+    &:active {
       outline: none;
     }
   }
@@ -72,9 +73,19 @@ div[id='root'] {
 }
 * {
   font-family: Inter, sans-serif;
+  
+  outline: none;
+  -webkit-touch-callout: none; /* iOS Safari */
 
-  &:focus-visible {
+  &:focus-visible,
+  &:focus,
+  &:active,
+  &:focus-within,
+  &:target,
+  &:hover,
+  &:visited {
     outline: none;
+    -webkit-touch-callout: none; /* iOS Safari */
   }
 }
 body {
