--- a/src/assets/styles/component-variables/_tab-bar.scss
+++ b/src/assets/styles/component-variables/_tab-bar.scss
@@ -2,4 +2,6 @@
 
 $tabBarColorsDefault:(
 'tab-default': $metal-400,
-'tab-hover': $accent)
+'tab-hover': $accent,
+'tab-color-active': $metal-700,
+)
