--- a/src/pages/NftPage/components/NftPayment/styles.module.scss
+++ b/src/pages/NftPage/components/NftPayment/styles.module.scss
@@ -18,6 +18,9 @@
     .send {
       margin-top: space(16);
     }
+    &Quantity{
+      margin-bottom: space(16);
+    }
   }
   .listing {
     width: 100%;
