--- a/src/pages/NftPage/components/NftOwners/styles.module.scss
+++ b/src/pages/NftPage/components/NftOwners/styles.module.scss
@@ -4,6 +4,7 @@
 
 .nftOwners {
   width: 100%;
+  min-height: 250px;
   .tabs {
     padding: 0;
     border-bottom: var(--nftpage-owners-border);
@@ -27,7 +28,8 @@
       }
     }
   }
-  .property {
+  .history,
+  .properties{
     margin-top: space(16);
   }
   .historyItem {
