--- a/src/pages/Profile/components/Nfts/styles.module.scss
+++ b/src/pages/Profile/components/Nfts/styles.module.scss
@@ -8,6 +8,16 @@
   .filters {
     background-color: var(--filters-button-background-color);
   }
+  .load{
+    margin-top: space(32);
+    height: 44px;
+    width: 100%;
+    &Text{
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16.94px;
+    }
+  }
   &Top {
     @include flex(column, flex-start, flex-start);
     width: 100%;
