--- a/src/pages/EditProfile/styles.module.scss
+++ b/src/pages/EditProfile/styles.module.scss
@@ -3,7 +3,7 @@
   @include container;
   padding-bottom: 136px;
   .loader{
-    margin: 0 auto;
+    margin: 136px auto;
   }
   &__title {
     margin: space(43, 0, 47) !important;
