--- a/src/components/CollectionCard/styles.module.scss
+++ b/src/components/CollectionCard/styles.module.scss
@@ -6,7 +6,7 @@
   @include flex(row, center, flex-start);
   padding: 18px 24px;
   background-color: var(--collectionCard-default-background);
-  max-width: 340px;
+  max-width: 360px;
   width: 100%;
   max-height: 94px;
   border-radius: 20px;
@@ -14,6 +14,10 @@
     font-size: 20px;
     line-height: 28px;
     font-weight: 600;
+  }
+  .currency{
+    width: 16px;
+    height: 16px;
   }
 }
 
@@ -30,6 +34,7 @@
 .price{
   @include flex(row, center,flex-start);
   gap: 3px;
+  width: 100%;
   // color: $color-actions-light-purple;
 }
 
