main page layout fixes, ArtCard image height fix

--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -115,3 +115,10 @@
     padding-top: space(50);
   }
 }
+@include large-mobile {
+  .wrapper{
+    .notableDrops{
+      margin-top: 0;
+    }
+  }
+}
