--- a/src/components/NftList/styles.module.scss
+++ b/src/components/NftList/styles.module.scss
@@ -8,8 +8,7 @@
   grid-gap: 24px;
   height: fit-content;
   width: 100%;
-  .card {
-    max-width: 100%;
-    height: 100%;
+  .skeleton{
+    margin: 0 auto;
   }
 }
