--- a/src/pages/Home/components/TopCollections/styles.module.scss
+++ b/src/pages/Home/components/TopCollections/styles.module.scss
@@ -49,3 +49,10 @@
   text-align: center !important;
   margin-top: 16px;
 }
+@include middle-mobile {
+  .topCollections {
+    .title {
+      font-size: 24px;
+    }
+  }
+}
