--- a/src/components/SearchCollection/styles.module.scss
+++ b/src/components/SearchCollection/styles.module.scss
@@ -37,7 +37,7 @@
     border-radius: var(--searchCollection-body-border-radius);
     padding: spacing(2.5, 3);
     z-index: -1;
-    max-width: 274px;
+    width: 274px;
     max-height: 446px;
     transform: translateX(-274px);
     @include transition;
@@ -65,6 +65,20 @@
         .name {
           @include ellipsis;
         }
+      }
+      .load {
+        height: 44px;
+        width: 100%;
+        margin-top: space(32);
+        margin-bottom: space(16);
+        &Text{
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 16.94px;
+        }
+      }
+      .loader{
+        margin: 12px auto;
       }
     }
   }
